# noidy

./: LICENSE  README.md  pyproject.toml
fark/: __init__.py  __main__.py  minter.py  n2tminter.py
noidy/: __main__.py  n2tminter.py
