[tool.poetry]
name = "fark"
version = "0.1.0"
description = "Free ARK minting and resolution"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
