[tool.poetry]
name = "noidy"
version = "0.2.0"
description = "NOID generator in python with JSON persistence."
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
noid = 'noidy.__main__:main'
